--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,13 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@paypal/react-paypal-js": "^8.1.3",
+    "@react-google-maps/api": "^2.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.8.1",
+    "firestore": "^1.1.6",
     "fs": "^0.0.1-security",
     "google-map-react": "^2.2.1",
     "graceful-fs": "^4.2.11",
@@ -19,6 +22,8 @@
     "react-bootstrap": "^2.10.0",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-firestore-hooks": "^0.0.1-0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "use-places-autocomplete": "^4.0.1",
